# EdoPro

./: .gitignore  CMakeLists.txt
EduPro/: CEduPro.cpp  CEduPro.h  CMakeLists.txt  main.cpp  readme.md
EduPro/bak/: CGlobalShortCut.h
EduPro/core/: CGpts.cpp  CGpts.h  UMessage.h
EduPro/openai/: COpenAI.cpp  COpenAI.h
EduPro/wnd/: CMainWnd.cpp  CMainWnd.h
EduPro/wnd/components/: CGptWnd.cpp  CGptWnd.h  CMsgWnd.h  CustomButton.h
include/: CEduPro.h
msTTS/: CMakeLists.txt  main.cpp
src/: CEduPro.cpp  CEduPro.h  CMakeLists.txt  main.cpp
src/core/: CGlobalShortCut.cpp  CScreenCapture.h  UMessage.h
src/openai/: COpenAI.cpp  COpenAI.h
src/wnd/: CMainWnd.cpp  CMainWnd.h
src/wnd/components/: CCenterWnd.cpp  CCenterWnd.h  CGptWnd.cpp  CGptWnd.h  CMessageWnd.h  CMultiGptWnd.cpp  CMultiGptWnd.h  CStatusWnd.cpp  CStatusWnd.h  CTitileWnd.cpp  CTitileWnd.h
translate/: CMakeLists.txt  CTranslate.cpp  CTranslate.h  main.cpp
translate/core/: CMessageWnd.h  CMoveFramelessWnd.cpp  CMoveFramelessWnd.h  CMysql.cpp  CMysql.h  CScreenCapture.cpp
translate/openai/: COpenAI.cpp  COpenAI.h
